# openintel

./: .env.example  .gitignore  Cargo.toml  README.md  SECURITY.md  package.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-24-openintel-speculation-cli.md  2026-06-29-openintel-mcp-server.md  2026-06-30-yahoo-market-adapter.md  2026-07-02-reddit-social-adapter.md  2026-07-04-setup-reddit-command.md  2026-07-10-bluesky-social-adapter.md  2026-07-13-interactive-setup.md  2026-07-16-risk-frame.md  2026-07-16-x-pulse.md
docs/superpowers/specs/: 2026-06-24-openintel-speculation-cli-design.md  2026-06-29-openintel-mcp-server-design.md  2026-06-30-yahoo-market-adapter-design.md  2026-07-01-reddit-social-adapter-design.md  2026-07-04-setup-reddit-command-design.md  2026-07-10-bluesky-social-adapter-design.md  (+3 more)
src/: cli.js  index.js  lib.rs  main.rs
src/adapters/: mod.rs
src/application/: add_intel.rs  alerts.rs  analyze.rs  mod.rs  opportunities.rs  pulse.rs  query.rs  reindex.rs  request.rs  resolve_trades.rs  risk.rs  search.rs  stats.rs  summarize.rs  trade.rs
src/cli/: args.rs  commands.rs  mod.rs  pulse.rs  risk.rs  run.rs  setup.rs
src/config/: mod.rs  secrets.rs  settings.rs  store.rs
src/domain/: error.rs  mod.rs  risk.rs
src/infrastructure/: mod.rs
src/mcp/: server.rs  tools.rs
test/: run.js
tests/: analyze_flow.rs  test_add_and_query.rs  test_alerts.rs  test_end_to_end.rs  test_execution.rs  test_hybrid_search.rs  test_opportunities.rs  test_resolve_trades.rs  test_resolver.rs  test_search.rs  test_strategies.rs  test_summarize.rs  test_trades.rs
tests/common/: mod.rs
(+77 files in other folders)
