[package]
name = "openintel"
version = "0.1.0"
edition = "2021"
description = "Security-first CLI that fuses social sentiment with market action into a speculation report"
license = "MIT"

[[bin]]
name = "openintel"
path = "src/main.rs"

[lib]
name = "openintel"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = "0.10"
async-trait = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rmcp = { version = "2", features = ["transport-io"] }
schemars = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
base64 = "0.22"
keyring = "4"
rpassword = "7"
